2011-07-07  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Merge from trunk a fix of file collections
	in policy applyment where only the last collection was added to the 
	conf file 

2011-07-05  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Fixed SNMP PROC
	modules always return critical state when snmp data contains newline
	character from the end of a string.

2011-06-13  Sancho Lerena <slerena@artica.es>

        * Tools.pm: Avoid errors when provide an empty string to md5.

        * NetworkServer.pm: Avoid warning messages on pandora_server.error

2011-06-06  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Merged from trunk. Use days_compact instead
	  of days_purge in pandora_compactdb.

2011-06-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Do not include
	  BADXML files when evaluating max_queue_files.

2011-05-07  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Implemented full-depth topology
	detection (recursive). Added checks for disable name resolution
	os detection and set a max. depth recursion. This produces
	amazing network maps ! :-)

2011-04-13  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Fixed bug #3273910. HPUX detection.

	* lib/PandoraFMS/ReconServer.pm: Fixed bug #3286027. Fix also 
	the "non finished" status for the Script Recon tasks, and as 
	new feature implements the "manual" recon task, works only when
	you press the button.

2011-03-15  Sancho Lerena <slerena@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a typo in interface
	detection :-(

2011-02-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Merged from trunk. Fixed a typo.

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. HTML encode events.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>
